fix: adjust h1 and h2 font sizes for improved responsiveness on smaller screens

--- a/policy/policy.css
+++ b/policy/policy.css
@@ -21,6 +21,12 @@ main {
 
 @media screen and (max-width: 500px){
   h2{
-    font-size: 30px;
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  h1 {
+    font-size: 28px;
   }
 }
